# mbus-gw-t2r

./: .gitignore  .gitlab-ci.yml  .gitmodules  BLOCKNOTE.md  CMakeLists.txt  README.md  modbus-t2r.conf  modbus-t2r_settings.conf
src/: t2r_defs.h  t2r_main.c  t2r_modbus.c  t2r_modbus.h  t2r_msgs.h  t2r_net.c  t2r_tty.c
